@@ -33,6 +33,7 @@ Release 1.1 Start 14/02/2021
 17. added token822.c, cdbmss.c, open_exclr.c
 - 16/06/2021
 18. configure.ac: added AC_CHECK_LIB(ssl, SSL_CTX_new, ...)
+19. added hmac_sha224, hmac_sha384 functions
 
 * Sunday 14 February 2021 11:27:21 PM IST
 Release 1.0 Start 21/05/2020
